sov-modules/sov-modules-macros/tests/module_info/not_supported_attribute.stderr
error: Only `#[module]`, `#[state]` or `#[address]` attributes are supported.
  --> tests/module_info/not_supported_attribute.rs:11:5
   |
11 |     test_state1: StateMap<u32, String, C::Storage>,
   |     ^^^^^^^^^^^

error: cannot find attribute `other` in this scope
  --> tests/module_info/not_supported_attribute.rs:10:7
   |
10 |     #[other]
   |       ^^^^^
